[0.2.0-SNAPSHOT] Java baseline downgrade 17 -> 11 Driver excluded from dependencies and should be provided by application